// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestDatabaseConnectButton controlled mode should call onClickTestButton when click the test button 1`] = `
<div>
  <div
    class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
        type="button"
      >
        <span>
          测试数据库连通性
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    />
  </div>
</div>
`;

exports[`TestDatabaseConnectButton controlled mode should call onClickTestButton when click the test button 2`] = `
<div>
  <div
    class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
        type="button"
      >
        <span>
          测试数据库连通性
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    />
  </div>
</div>
`;

exports[`TestDatabaseConnectButton controlled mode should render message by initHide 1`] = `
<div>
  <div
    class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
        type="button"
      >
        <span>
          测试数据库连通性
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    />
  </div>
</div>
`;

exports[`TestDatabaseConnectButton controlled mode should render message by initHide 2`] = `
<div>
  <div
    class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-loading basic-button-wrapper css-geipcv"
        type="button"
      >
        <span
          class="ant-btn-icon ant-btn-loading-icon"
        >
          <span
            aria-label="loading"
            class="anticon anticon-loading anticon-spin"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="loading"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
              />
            </svg>
          </span>
        </span>
        <span>
          测试数据库连通性
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    />
  </div>
</div>
`;

exports[`TestDatabaseConnectButton controlled mode should render message by initHide 3`] = `
<div>
  <div
    class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-loading basic-button-wrapper css-geipcv"
        type="button"
      >
        <span
          class="ant-btn-icon ant-btn-loading-icon"
        >
          <span
            aria-label="loading"
            class="anticon anticon-loading anticon-spin"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="loading"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
              />
            </svg>
          </span>
        </span>
        <span>
          测试数据库连通性
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <a
        class="ant-typography css-dev-only-do-not-override-txh9fw"
      >
        正在尝试进行连接...
      </a>
    </div>
  </div>
</div>
`;

exports[`TestDatabaseConnectButton controlled mode should render message by initHide 4`] = `
<div>
  <div
    class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
        type="button"
      >
        <span>
          测试数据库连通性
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <div
        class="css-analyi"
      >
        <span
          class="custom-icon css-u3jcp4"
          role="img"
        >
          <svg
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.00001 14.6666C4.31811 14.6666 1.33334 11.6818 1.33334 7.99998C1.33334 4.31808 4.31811 1.33331 8.00001 1.33331C11.6819 1.33331 14.6667 4.31808 14.6667 7.99998C14.6667 11.6818 11.6819 14.6666 8.00001 14.6666ZM8.00001 13.3333C10.9455 13.3333 13.3333 10.9455 13.3333 7.99998C13.3333 5.05446 10.9455 2.66665 8.00001 2.66665C5.05449 2.66665 2.66668 5.05446 2.66668 7.99998C2.66668 10.9455 5.05449 13.3333 8.00001 13.3333ZM7.33508 10.6666L4.50667 7.83825L5.44948 6.89538L7.33508 8.78105L11.1063 5.00979L12.0491 5.9526L7.33508 10.6666Z"
              fill="#1CB889"
            />
          </svg>
        </span>
        数据库连通性测试成功
      </div>
    </div>
  </div>
</div>
`;

exports[`TestDatabaseConnectButton controlled mode should render message by initHide 5`] = `
<div>
  <div
    class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
        type="button"
      >
        <span>
          测试数据库连通性
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
      >
        <div
          class="ant-space-item"
        >
          <div
            class="css-dgcbul"
          >
            <span
              class="custom-icon css-u3jcp4"
              role="img"
            >
              <svg
                fill="none"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.00001 14.6666C4.31801 14.6666 1.33334 11.682 1.33334 7.99998C1.33334 4.31798 4.31801 1.33331 8.00001 1.33331C11.682 1.33331 14.6667 4.31798 14.6667 7.99998C14.6667 11.682 11.682 14.6666 8.00001 14.6666ZM8.00001 13.3333C9.4145 13.3333 10.7711 12.7714 11.7712 11.7712C12.7714 10.771 13.3333 9.41447 13.3333 7.99998C13.3333 6.58549 12.7714 5.22894 11.7712 4.22874C10.7711 3.22855 9.4145 2.66665 8.00001 2.66665C6.58552 2.66665 5.22897 3.22855 4.22877 4.22874C3.22858 5.22894 2.66668 6.58549 2.66668 7.99998C2.66668 9.41447 3.22858 10.771 4.22877 11.7712C5.22897 12.7714 6.58552 13.3333 8.00001 13.3333ZM8.00001 7.05731L9.88534 5.17131L10.8287 6.11465L8.94268 7.99998L10.8287 9.88531L9.88534 10.8286L8.00001 8.94265L6.11468 10.8286L5.17134 9.88531L7.05734 7.99998L5.17134 6.11465L6.11468 5.17131L8.00001 7.05731Z"
                  fill="#F66074"
                />
              </svg>
            </span>
            未能成功链接到数据库
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TestDatabaseConnectButton uncontrolled mode should render message by initHide 1`] = `
<div>
  <div
    class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-loading basic-button-wrapper css-geipcv"
        type="button"
      >
        <span
          class="ant-btn-icon ant-btn-loading-icon"
        >
          <span
            aria-label="loading"
            class="anticon anticon-loading anticon-spin"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="loading"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
              />
            </svg>
          </span>
        </span>
        <span>
          测试数据库连通性
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    />
  </div>
</div>
`;

exports[`TestDatabaseConnectButton uncontrolled mode should render message by initHide 2`] = `
<div>
  <div
    class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
        type="button"
      >
        <span>
          测试数据库连通性
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    />
  </div>
</div>
`;

exports[`TestDatabaseConnectButton uncontrolled mode should show connect result when click the test button 1`] = `
<div>
  <div
    class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
        type="button"
      >
        <span>
          测试数据库连通性
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    />
  </div>
</div>
`;

exports[`TestDatabaseConnectButton uncontrolled mode should show connect result when click the test button 2`] = `
<div>
  <div
    class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
        type="button"
      >
        <span>
          测试数据库连通性
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <div
        class="css-analyi"
      >
        <span
          class="custom-icon css-u3jcp4"
          role="img"
        >
          <svg
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.00001 14.6666C4.31811 14.6666 1.33334 11.6818 1.33334 7.99998C1.33334 4.31808 4.31811 1.33331 8.00001 1.33331C11.6819 1.33331 14.6667 4.31808 14.6667 7.99998C14.6667 11.6818 11.6819 14.6666 8.00001 14.6666ZM8.00001 13.3333C10.9455 13.3333 13.3333 10.9455 13.3333 7.99998C13.3333 5.05446 10.9455 2.66665 8.00001 2.66665C5.05449 2.66665 2.66668 5.05446 2.66668 7.99998C2.66668 10.9455 5.05449 13.3333 8.00001 13.3333ZM7.33508 10.6666L4.50667 7.83825L5.44948 6.89538L7.33508 8.78105L11.1063 5.00979L12.0491 5.9526L7.33508 10.6666Z"
              fill="#1CB889"
            />
          </svg>
        </span>
        数据库连通性测试成功
      </div>
    </div>
  </div>
</div>
`;

exports[`TestDatabaseConnectButton uncontrolled mode should show connect result when click the test button 3`] = `
<div>
  <div
    class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
        type="button"
      >
        <span>
          测试数据库连通性
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    />
  </div>
</div>
`;

exports[`TestDatabaseConnectButton uncontrolled mode should show connect result when click the test button 4`] = `
<div>
  <div
    class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
        type="button"
      >
        <span>
          测试数据库连通性
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <div
        class="css-analyi"
      >
        <span
          class="custom-icon css-u3jcp4"
          role="img"
        >
          <svg
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.00001 14.6666C4.31811 14.6666 1.33334 11.6818 1.33334 7.99998C1.33334 4.31808 4.31811 1.33331 8.00001 1.33331C11.6819 1.33331 14.6667 4.31808 14.6667 7.99998C14.6667 11.6818 11.6819 14.6666 8.00001 14.6666ZM8.00001 13.3333C10.9455 13.3333 13.3333 10.9455 13.3333 7.99998C13.3333 5.05446 10.9455 2.66665 8.00001 2.66665C5.05449 2.66665 2.66668 5.05446 2.66668 7.99998C2.66668 10.9455 5.05449 13.3333 8.00001 13.3333ZM7.33508 10.6666L4.50667 7.83825L5.44948 6.89538L7.33508 8.78105L11.1063 5.00979L12.0491 5.9526L7.33508 10.6666Z"
              fill="#1CB889"
            />
          </svg>
        </span>
        数据库连通性测试成功
      </div>
    </div>
  </div>
</div>
`;
